Dragging & Drop color (fields) let's blender crash. #96140

Closed
opened 2022-03-03 03:17:33 +01:00 by Guido · 10 comments

System Information
Operating system: macOS-12.2.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-02 22:58, hash: 3c175caaa3 also the version from 2022-03-01
Tested with: Factory reseted and ALSO with user settings

Short description of error

  • Open default scene
  • Switch to shading workspace
  • In Principled BSDF node, drag any color field and drop it on another for copying the color (eg: drag subsurface color to base color)
    (Crash may not happen on first attempt)
**System Information** Operating system: macOS-12.2.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.7.103 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-02 22:58, hash: `3c175caaa3` also the version from 2022-03-01 Tested with: Factory reseted and ALSO with user settings **Short description of error** - Open default scene - Switch to shading workspace - In Principled BSDF node, drag any color field and drop it on another for copying the color (eg: drag subsurface color to base color) (Crash may not happen on first attempt)
Author

Added subscriber: @Nurb2Kea

Added subscriber: @Nurb2Kea
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, Thanks for the report. Crash confirmed on latest master

Bisecting...

Hi, Thanks for the report. Crash confirmed on latest master Bisecting...
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Bisecting points me to aa71414dfc
@ideasman42 , can you take a look?

Bisecting points me to aa71414dfc @ideasman42 , can you take a look?
Campbell Barton self-assigned this 2022-03-03 10:52:43 +01:00

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

Seems to be caused by 8e940f31fd,

@JulianEisel it looks like the storage should be cleared from the context when it's freed, could you check on this?

Seems to be caused by 8e940f31fdca44816a5d6151c74567b2d6d75454, @JulianEisel it looks like the storage should be cleared from the context when it's freed, could you check on this?
Campbell Barton removed their assignment 2022-03-03 11:22:24 +01:00

This issue was referenced by 9b12889a1a

This issue was referenced by 9b12889a1a4e6edb595c988168e5c1dff4bf00d9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-03-03 12:55:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96140
No description provided.