Fix T96140: Crash on color button drag & drop

Use-after-free in context store, which wasn't cleared correctly after
setting and querying.